--- a/css/styles.scss
+++ b/css/styles.scss
@@ -597,8 +597,16 @@ background-color: var(--button-primary);
 
             .small {
               font-size: .7rem;
-              line-height: .9rem;
+              line-height: .85rem;
+
+              &:first-child {
+                margin-bottom: .05rem;
+              }
             }
+          }
+
+          .desc {
+            line-height: 1.2rem;
           }
         }
 
