--- a/css/styles.css
+++ b/css/styles.css
@@ -573,7 +573,7 @@ header button:hover {
 .overlay {
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   top: 0;
   left: 0;
   background-color: var(--overlay);
