--- a/css/styles.scss
+++ b/css/styles.scss
@@ -485,7 +485,7 @@ background-color: var(--button-primary);
 .overlay {
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   top: 0;
   left: 0;
   background-color: var(--overlay);
