--- a/css/styles.scss
+++ b/css/styles.scss
@@ -17,6 +17,7 @@
   --overlay: rgba(255,255,255,.8);
   --message: #eee;
   --message-success: #bfc;
+  --message-error: #fdb;
 
   --button-gray: #ccc;
   --button-danger: #aaa;
@@ -543,6 +544,10 @@ background-color: var(--button-primary);
         background-color: var(--message-success);
       }
 
+      &.error {
+        background-color: var(--message-error);
+      }
+
       &+hr {
         display: none;
       }
@@ -611,10 +616,13 @@ background-color: var(--button-primary);
         }
 
         .hint {
-          // padding: .25rem .5rem;
           margin: .75rem 0;
           text-align: center;
 
+          &:first-child {
+            margin-top: 0;
+          }
+          
           &:last-child {
             margin-bottom: 0;
           }
